# data_over_sound

./: .gitignore  POTENTIAL_BUGS.md  README.md  chunker.py  cli.py  command_manager.py  command_validator.py  compile.bat  configure_sound_devices.py  file_sharing.py  gw.py  import_plugins.py  main.py  parse.py  pyproject.toml  screen_reader_manager.py  settings_manager.py  task.md  test_file_sharing.py
datawave/: __main__.py
datawave/core/: audio_engine.py  audio_stream.py  dispatcher.py  gateway.py  protocol.py
datawave/services/: file_transfer.py  remote_control.py
datawave/ui/: cli.py  gui.py
datawave/utils/: parser.py  screen_reader.py  settings.py
templates/: exit_app.py  get_volume.py  open_url.py  play_music.py  restart.py  shutdown.py  speak.py
tests/: check_bytes.py  simulator.py  test_protocol.py
