[project]
name = "data-over-sound"
version = "0.1.0"
description = "This is a program to send small pieces of data using sound waves between airgaped devices"
authors = [{name = "deniz", email = "deniz@r1oaz.ru"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "ggwave>=0.4.2",
    "sounddevice",
    "cython",
    "rust-enum",
    "wxpython; sys_platform == 'win32' or sys_platform == 'darwin'",
    "accessible_output3",
]

[project.optional-dependencies]
gui = ["wxpython"]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["/"]

[tool.uv]
extra-build-dependencies = { ggwave = ["Cython"]}
extra-build-variables = { ggwave = { GGWAVE_USE_CYTHON = "1" } }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
